fixed current weather container bleeding

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -4,7 +4,7 @@ header {
 }
 
 .current-day-container {
-	height: 200px;
+	min-height: 200px;
 }
 
 .heading-container h1 {
